# ChatManager

./: .gitignore
backend/: CMakeLists.txt
backend/src/: main.cpp  my_handle.cpp  my_handle.h  renderHTML.h
data/: usdpwd
lib/: CMakeLists.txt
template/: board_chat.html  error_page.html  login.html
template/css/: styles.css
template/js/: app.js
